MACROS = \
	aclocal-include.m4 \
	check-type.m4 \
	gnupg-check-typedef.m4 \
	aspell.m4 \
	openssl.m4 \
	spamassassin.m4 \
	codeset.m4 gettext.m4 glibc21.m4 iconv.m4 intdiv0.m4 inttypes.m4 inttypes_h.m4 inttypes-pri.m4 isc-posix.m4 lcmessage.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 nls.m4 po.m4 progtest.m4 stdint_h.m4 uintmax_t.m4 ulonglong.m4

EXTRA_DIST = $(MACROS) \
	missing/gdk-pixbuf.m4 \
	missing/gettext.m4 \
	missing/gpgme.m4 \
	missing/imlib.m4
