noinst_LIBRARIES = libkcc.a

libkcc_a_SOURCES = \
	compare.c	\
	getstr.c	\
	guess.c		\
	showcode.c	\
	check.c		\
	filter.c	\
	buffer.c	\
	dec.c		\
	euc.c		\
	jis.c		\
	out.c		\
	outchar.c	\
	setfunc.c	\
	sjis.c		\
	kcc.h		\
	libkcc.h

EXTRA_DIST = \
	Makefile.std \
	ROUTINE \
	outsjis.c \
	test.c \
	test_check.c \
	test_file \
	test_file.sjis \
	test_filter.c \
	testfile

#lib_LTLIBRARIES = libkcc.la

#libkcc_la_SOURCES = \
#	compare.c	\
#	getstr.c	\
#	guess.c		\
#	showcode.c	\
#	check.c		\
#	filter.c	\
#	buffer.c	\
#	dec.c		\
#	euc.c		\
#	jis.c		\
#	out.c		\
#	outchar.c	\
#	setfunc.c	\
#	sjis.c		\
#	kcc.h		\
#	libkcc.h

#libkcc_la_LDFLAGS = \
#	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
#	-release $(LT_RELEASE)
