SUBDIRS = common gtk plugins

bin_PROGRAMS = sylpheed

sylpheed_SOURCES = \
	account.c \
	action.c \
	addr_compl.c \
	addrbook.c \
	addrcache.c \
	addrclip.c \
	addressadd.c \
	addressbook.c \
	addrgather.c \
	addrharvest.c \
	addrindex.c \
	addritem.c \
	addrquery.c \
	addrselect.c \
	alertpanel.c \
	codeconv.c \
	compose.c \
	crash.c \
	customheader.c \
	displayheader.c \
	editaddress.c \
	editbook.c \
	editgroup.c \
	editjpilot.c \
	editldap.c \
	editldap_basedn.c \
	editvcard.c \
	enriched.c \
	exphtmldlg.c \
	expldifdlg.c \
	export.c \
	exporthtml.c \
	exportldif.c \
	filtering.c \
	folder.c \
	folder_item_prefs.c \
	foldersel.c \
	folderview.c \
	grouplistdialog.c \
	headerview.c \
	html.c \
	imap.c \
	import.c \
	importldif.c \
	importmutt.c \
	importpine.c \
	inc.c \
	inputdialog.c \
	jpilot.c \
	ldapctrl.c \
	ldapquery.c \
	ldapserver.c \
	ldaputil.c \
	ldif.c \
	logwindow.c \
	main.c \
	mainwindow.c \
	manual.c \
	matcher.c \
	matcher_parser_lex.l \
	matcher_parser_parse.y \
	mbox.c \
	mbox_folder.c \
	message_search.c \
	messageview.c \
	mh.c \
	mimeview.c \
	msgcache.c \
	mutt.c \
	news.c \
	noticeview.c \
	passphrase.c \
	pine.c \
	pop.c \
	prefs_account.c \
	prefs_actions.c \
	prefs_common.c \
	prefs_customheader.c \
	prefs_display_header.c \
	prefs_filtering.c \
	prefs_filtering_action.c \
	prefs_folder_item.c \
	prefs_gtk.c \
	prefs_matcher.c \
	prefs_scoring.c \
	prefs_spelling.c \
	prefs_summary_column.c \
	prefs_template.c \
	prefs_toolbar.c \
	procheader.c \
	procmime.c \
	procmsg.c \
	progressdialog.c \
	quote_fmt.c \
	quote_fmt_lex.l \
	quote_fmt_parse.y \
	recv.c \
	rfc2015.c \
	scoring.c \
	select-keys.c \
	send_message.c \
	setup.c \
	sigstatus.c \
	simple-gettext.c \
	sourcewindow.c \
	ssl_manager.c \
	statusbar.c \
	stock_pixmap.c \
	string_match.c \
	summary_search.c \
	summaryview.c \
	textview.c \
	toolbar.c \
	undo.c \
	unmime.c \
	vcard.c

sylpheedincludedir = $(pkgincludedir)
sylpheedinclude_HEADERS = \
	account.h \
	action.h \
	adbookbase.h \
	addr_compl.h \
	addrbook.h \
	addrcache.h \
	addrclip.h \
	addressadd.h \
	addressbook.h \
	addressitem.h \
	addrgather.h \
	addrharvest.h \
	addrindex.h \
	addritem.h \
	addrquery.h \
	addrselect.h \
	alertpanel.h \
	codeconv.h \
	compose.h \
	crash.h \
	customheader.h \
	displayheader.h \
	editaddress.h \
	editbook.h \
	editgroup.h \
	editjpilot.h \
	editldap.h \
	editldap_basedn.h \
	editvcard.h \
	enriched.h \
	exphtmldlg.h \
	export.h \
	exporthtml.h \
	filtering.h \
	folder.h \
	folder_item_prefs.h \
	foldersel.h \
	folderview.h \
	grouplistdialog.h \
	headerview.h \
	html.h \
	imap.h \
	import.h \
	importldif.h \
	importmutt.h \
	importpine.h \
	inc.h \
	inputdialog.h \
	jpilot.h \
	ldapctrl.h \
	ldapquery.h \
	ldapserver.h \
	ldaputil.h \
	ldif.h \
	logwindow.h \
	main.h \
	mainwindow.h \
	manual.h \
	matcher.h \
	matcher_parser.h \
	matcher_parser_lex.h \
	matcher_parser_parse.h \
	mbox.h \
	mbox_folder.h \
	message_search.h \
	messageview.h \
	mh.h \
	mimeview.h \
	msgcache.h \
	mutt.h \
	news.h \
	noticeview.h \
	passphrase.h \
	pine.h \
	pop.h \
	prefs_account.h \
	prefs_actions.h \
	prefs_common.h \
	prefs_customheader.h \
	prefs_display_header.h \
	prefs_filtering.h \
	prefs_filtering_action.h \
	prefs_folder_item.h \
	prefs_gtk.h \
	prefs_matcher.h \
	prefs_scoring.h \
	prefs_spelling.h \
	prefs_summary_column.h \
	prefs_template.h \
	prefs_toolbar.h \
	procheader.h \
	procmime.h \
	procmsg.h \
	progressdialog.h \
	quote_fmt.h \
	quote_fmt_lex.h \
	quote_fmt_parse.h \
	recv.h \
	rfc2015.h \
	scoring.h \
	select-keys.h \
	send_message.h \
	setup.h \
	sigstatus.h \
	sourcewindow.h \
	ssl_manager.h \
	statusbar.h \
	stock_pixmap.h \
	string_match.h \
	summary_search.h \
	summaryview.h \
	textview.h \
	toolbar.h \
	undo.h \
	unmime.h \
	vcard.h

BUILT_SOURCES = \
	matcher_parser_parse.h \
	quote_fmt_parse.h

EXTRA_DIST = \
	pixmaps/address_book.xpm \
	pixmaps/address.xpm \
	pixmaps/book.xpm \
	pixmaps/category.xpm \
	pixmaps/checkbox_off.xpm \
	pixmaps/checkbox_on.xpm \
	pixmaps/clipkey.xpm \
	pixmaps/clip.xpm \
	pixmaps/close.xpm \
	pixmaps/complete.xpm \
	pixmaps/continue.xpm \
	pixmaps/deleted.xpm \
	pixmaps/dir_close.xpm \
	pixmaps/dir_open_hrm.xpm \
	pixmaps/dir_open.xpm \
	pixmaps/down_arrow.xpm \
	pixmaps/drafts_close.xpm \
	pixmaps/drafts_open.xpm \
	pixmaps/error.xpm \
	pixmaps/exec.xpm \
	pixmaps/folder.xpm \
	pixmaps/forwarded.xpm \
	pixmaps/gpg_signed.xpm \
	pixmaps/group.xpm \
	pixmaps/ignorethread.xpm \
	pixmaps/inbox_hrm.xpm \
	pixmaps/inbox.xpm \
	pixmaps/interface.xpm \
	pixmaps/jpilot.xpm \
	pixmaps/key.xpm \
	pixmaps/ldap.xpm \
	pixmaps/linewrap.xpm \
	pixmaps/locked.xpm \
	pixmaps/mail_attach.xpm \
	pixmaps/mail_compose.xpm \
	pixmaps/mail_forward.xpm \
	pixmaps/mail_receive_all.xpm \
	pixmaps/mail_receive.xpm \
	pixmaps/mail_reply_to_all.xpm \
	pixmaps/mail_reply_to_author.xpm \
	pixmaps/mail_reply.xpm \
	pixmaps/mail_send_queue.xpm \
	pixmaps/mail_send.xpm \
	pixmaps/mail.xpm \
	pixmaps/mark.xpm \
	pixmaps/messageview_text.xpm \
	pixmaps/mime_application_octet_stream.xpm \
	pixmaps/mime_application.xpm \
	pixmaps/mime_audio.xpm \
	pixmaps/mime_gpg_expired.xpm \
	pixmaps/mime_gpg_failed.xpm \
	pixmaps/mime_gpg_passed.xpm \
	pixmaps/mime_gpg_signed.xpm \
	pixmaps/mime_gpg_unknown.xpm \
	pixmaps/mime_image.xpm \
	pixmaps/mime_text_enriched.xpm \
	pixmaps/mime_text_html.xpm \
	pixmaps/mime_text_plain.xpm \
	pixmaps/mime_unknown.xpm \
	pixmaps/news_compose.xpm \
	pixmaps/new.xpm \
	pixmaps/notice_error.xpm \
	pixmaps/notice_note.xpm \
	pixmaps/notice_warn.xpm \
	pixmaps/outbox_hrm.xpm \
	pixmaps/outbox.xpm \
	pixmaps/paste.xpm \
	pixmaps/preferences.xpm \
	pixmaps/properties.xpm \
	pixmaps/quicksearch.xpm \
	pixmaps/regular.xpm \
	pixmaps/replied.xpm \
	pixmaps/search.xpm \
	pixmaps/sylpheed_logo.xpm \
	pixmaps/sylpheed.xpm \
	pixmaps/trash_hrm.xpm \
	pixmaps/trash.xpm \
	pixmaps/unread.xpm \
	pixmaps/up_arrow.xpm \
	pixmaps/vcard.xpm \
	pixmaps/work_offline.xpm \
	pixmaps/work_online.xpm

INCLUDES = \
	-Icommon \
	-Igtk \
	-I$(top_srcdir)/intl

sylpheed_LDFLAGS = \
	-export-dynamic

sylpheed_LDADD = \
	gtk/libsylpheedgtk.la \
	$(ASPELL_LIBS) \
	$(INTLLIBS) \
	$(GTK_LIBS) \
	$(GPGME_LIBS) \
	$(LDAP_LIBS) \
	$(OPENSSL_LIBS) \
	$(LIBICONV)

AM_CPPFLAGS = \
	-DG_LOG_DOMAIN=\"Sylpheed\" \
	-DLOCALEDIR=\""$(localedir)"\" \
	-DMANUALDIR=\""$(manualdir)"\" \
	-DFAQDIR=\""$(faqdir)"\" \
	-DTARGET_ALIAS=\""$(target_triplet)"\" \
	-DSYSCONFDIR=\""$(sysconfdir)"\" \
	$(ASPELL_CFLAGS) \
	$(GTK_CFLAGS) \
	$(GPGME_CFLAGS) \
	$(OPENSSL_CFLAGS)

AM_YFLAGS = -d
