SUBDIRS = common gtk plugins

bin_PROGRAMS = sylpheed

sylpheed_SOURCES = \
	account.c \
	action.c \
	addrbook.c \
	addrcache.c \
	addrclip.c \
	addr_compl.c \
	addressadd.c \
	addressbook.c \
	addrgather.c \
	addrharvest.c \
	addrindex.c \
	addritem.c \
	addrquery.c \
	addrselect.c \
	alertpanel.c \
	browseldap.c \
	codeconv.c \
	compose.c \
	crash.c \
	customheader.c \
	displayheader.c \
	editaddress.c \
	editbook.c \
	editgroup.c \
	editjpilot.c \
	editldap_basedn.c \
	editldap.c \
	editvcard.c \
	enriched.c \
	exphtmldlg.c \
	expldifdlg.c \
	export.c \
	exporthtml.c \
	exportldif.c \
	filtering.c \
	folder.c \
	folder_item_prefs.c \
	foldersel.c \
	folderutils.c \
	folderview.c \
	gedit-print.c \
	grouplistdialog.c \
	headerview.c \
	html.c \
	image_viewer.c \
	imap.c \
	imap_gtk.c \
	import.c \
	importldif.c \
	importmutt.c \
	importpine.c \
	inc.c \
	jpilot.c \
	ldapctrl.c \
	ldaplocate.c \
	ldapquery.c \
	ldapserver.c \
	ldaputil.c \
	ldif.c \
	localfolder.c \
	main.c \
	mainwindow.c \
	manual.c \
	matcher.c \
	matcher_parser_lex.l \
	matcher_parser_parse.y \
	mbox.c \
	message_search.c \
	messageview.c \
	mh.c \
	mh_gtk.c \
	mimeview.c \
	msgcache.c \
	mutt.c \
	news.c \
	news_gtk.c \
	noticeview.c \
	partial_download.c \
	pine.c \
	pop.c \
	prefs_account.c \
	prefs_actions.c \
	prefs_common.c \
	prefs_compose_writing.c \
	prefs_customheader.c \
	prefs_display_header.c \
	prefs_ext_prog.c \
	prefs_filtering_action.c \
	prefs_filtering.c \
	prefs_folder_item.c \
	prefs_fonts.c \
	prefs_gtk.c \
	prefs_image_viewer.c \
	prefs_matcher.c \
	prefs_message.c \
	prefs_msg_colors.c \
	prefs_other.c \
	prefs_quote.c \
	prefs_receive.c \
	prefs_send.c \
	prefs_spelling.c \
	prefs_summaries.c \
	prefs_summary_column.c \
	prefs_template.c \
	prefs_themes.c \
	prefs_toolbar.c \
	prefs_wrapping.c \
	privacy.c \
	procheader.c \
	procmime.c \
	procmsg.c \
	quote_fmt.c \
	quote_fmt_lex.l \
	quote_fmt_parse.y \
	recv.c \
	remotefolder.c \
	send_message.c \
	setup.c \
	simple-gettext.c \
	sourcewindow.c \
	ssl_manager.c \
	statusbar.c \
	stock_pixmap.c \
	summary_search.c \
	summaryview.c \
	textview.c \
	toolbar.c \
	undo.c \
	unmime.c \
	vcard.c \
	wizard.c

sylpheedincludedir = $(pkgincludedir)
sylpheedinclude_HEADERS = \
	account.h \
	action.h \
	adbookbase.h \
	addrbook.h \
	addrcache.h \
	addrclip.h \
	addr_compl.h \
	addrdefs.h \
	addressadd.h \
	addressbook.h \
	addressitem.h \
	addrgather.h \
	addrharvest.h \
	addrindex.h \
	addritem.h \
	addrquery.h \
	addrselect.h \
	alertpanel.h \
	browseldap.h \
	codeconv.h \
	compose.h \
	crash.h \
	customheader.h \
	displayheader.h \
	editaddress.h \
	editbook.h \
	editgroup.h \
	editjpilot.h \
	editldap_basedn.h \
	editldap.h \
	editvcard.h \
	enriched.h \
	exphtmldlg.h \
	expldifdlg.h \
	export.h \
	exporthtml.h \
	exportldif.h \
	filtering.h \
	folder.h \
	folder_item_prefs.h \
	foldersel.h \
	folderutils.h \
	folderview.h \
	gedit-print.h \
	grouplistdialog.h \
	headerview.h \
	html.h \
	image_viewer.h \
	imap.h \
	imap_gtk.h \
	import.h \
	importldif.h \
	importmutt.h \
	importpine.h \
	inc.h \
	jpilot.h \
	ldapctrl.h \
	ldaplocate.h \
	ldapquery.h \
	ldapserver.h \
	ldaputil.h \
	ldif.h \
	localfolder.h \
	main.h \
	mainwindow.h \
	manual.h \
	matcher.h \
	matcher_parser.h \
	matcher_parser_lex.h \
	matcher_parser_parse.h \
	mbox.h \
	message_search.h \
	messageview.h \
	mh.h \
	mh_gtk.h \
	mimeview.h \
	msgcache.h \
	mutt.h \
	news.h \
	news_gtk.h \
	noticeview.h \
	partial_download.h \
	pine.h \
	pop.h \
	prefs_account.h \
	prefs_actions.h \
	prefs_common.h \
	prefs_compose_writing.h \
	prefs_customheader.h \
	prefs_display_header.h \
	prefs_ext_prog.h \
	prefs_filtering_action.h \
	prefs_filtering.h \
	prefs_folder_item.h \
	prefs_fonts.h \
	prefs_gtk.h \
	prefs_image_viewer.h \
	prefs_matcher.h \
	prefs_message.h \
	prefs_msg_colors.h \
	prefs_other.h \
	prefs_quote.h \
	prefs_receive.h \
	prefs_send.h \
	prefs_spelling.h \
	prefs_summaries.h \
	prefs_summary_column.h \
	prefs_template.h \
	prefs_themes.h \
	prefs_toolbar.h \
	prefs_wrapping.h \
	privacy.h \
	procheader.h \
	procmime.h \
	procmsg.h \
	quote_fmt.h \
	quote_fmt_lex.h \
	quote_fmt_parse.h \
	recv.h \
	remotefolder.h \
	send_message.h \
	setup.h \
	sourcewindow.h \
	ssl_manager.h \
	statusbar.h \
	stock_pixmap.h \
	summary_search.h \
	summaryview.h \
	textview.h \
	toolbar.h \
	undo.h \
	unmime.h \
	vcard.h \
	wizard.h

BUILT_SOURCES = \
	matcher_parser_parse.h \
	quote_fmt_parse.h

EXTRA_DIST = \
	pixmaps/address_book.xpm \
	pixmaps/address_search.xpm \
	pixmaps/address.xpm \
	pixmaps/book.xpm \
	pixmaps/category.xpm \
	pixmaps/checkbox_off.xpm \
	pixmaps/checkbox_on.xpm \
	pixmaps/check_spelling.xpm \
	pixmaps/clipkey.xpm \
	pixmaps/clip.xpm \
	pixmaps/clip_gpg_signed.xpm \
	pixmaps/close.xpm \
	pixmaps/complete.xpm \
	pixmaps/continue.xpm \
	pixmaps/deleted.xpm \
	pixmaps/dir_close.xpm \
	pixmaps/dir_noselect.xpm \
        pixmaps/dir_open_hrm.xpm \
	pixmaps/dir_open.xpm \
	pixmaps/down_arrow.xpm \
	pixmaps/drafts_close.xpm \
	pixmaps/drafts_open.xpm \
	pixmaps/error.xpm \
	pixmaps/exec.xpm \
	pixmaps/forwarded.xpm \
	pixmaps/gpg_signed.xpm \
	pixmaps/group.xpm \
	pixmaps/ignorethread.xpm \
	pixmaps/inbox_hrm.xpm \
	pixmaps/inbox.xpm \
	pixmaps/interface.xpm \
	pixmaps/jpilot.xpm \
	pixmaps/key.xpm \
	pixmaps/ldap.xpm \
	pixmaps/linewrap.xpm \
	pixmaps/linewrapcurrent.xpm \
	pixmaps/locked.xpm \
	pixmaps/mail_attach.xpm \
	pixmaps/mail_compose.xpm \
	pixmaps/mail_forward.xpm \
	pixmaps/mail_receive_all.xpm \
	pixmaps/mail_receive.xpm \
	pixmaps/mail_reply_to_all.xpm \
	pixmaps/mail_reply_to_author.xpm \
	pixmaps/mail_reply.xpm \
	pixmaps/mail_send_queue.xpm \
	pixmaps/mail_send.xpm \
	pixmaps/mail.xpm \
	pixmaps/mark.xpm \
	pixmaps/mime_application.xpm \
	pixmaps/mime_audio.xpm \
	pixmaps/mime_image.xpm \
	pixmaps/mime_message.xpm \
	pixmaps/mime_text_enriched.xpm \
	pixmaps/mime_text_html.xpm \
	pixmaps/mime_text_plain.xpm \
	pixmaps/mime_unknown.xpm \
	pixmaps/news_compose.xpm \
	pixmaps/new.xpm \
	pixmaps/notice_error.xpm \
	pixmaps/notice_note.xpm \
	pixmaps/notice_warn.xpm \
	pixmaps/offline.xpm \
	pixmaps/online.xpm \
	pixmaps/outbox_hrm.xpm \
	pixmaps/outbox.xpm \
	pixmaps/paste.xpm \
	pixmaps/preferences.xpm \
	pixmaps/privacy_expired.xpm \
	pixmaps/privacy_failed.xpm \
	pixmaps/privacy_passed.xpm \
	pixmaps/privacy_signed.xpm \
	pixmaps/privacy_unknown.xpm \
	pixmaps/privacy_warn.xpm \
	pixmaps/privacy_emblem_encrypted.xpm \
	pixmaps/privacy_emblem_failed.xpm \
	pixmaps/privacy_emblem_passed.xpm \
	pixmaps/privacy_emblem_signed.xpm \
	pixmaps/privacy_emblem_warn.xpm \
	pixmaps/properties.xpm \
	pixmaps/quicksearch.xpm \
	pixmaps/replied.xpm \
	pixmaps/search.xpm \
	pixmaps/sylpheed_icon.xpm \
	pixmaps/sylpheed_logo.xpm \
	pixmaps/sylpheed.xpm \
	pixmaps/trash_hrm.xpm \
	pixmaps/trash.xpm \
	pixmaps/unread.xpm \
	pixmaps/read.xpm \
	pixmaps/up_arrow.xpm \
	pixmaps/vcard.xpm

INCLUDES = \
	-Icommon \
	-Igtk

sylpheed_LDFLAGS = \
	-export-dynamic

sylpheed_LDADD = \
	gtk/libsylpheedgtk.la \
	$(ASPELL_LIBS) \
	$(INTLLIBS) \
	$(GTK_LIBS) \
	$(GPGME_LIBS) \
	$(LDAP_LIBS) \
	$(OPENSSL_LIBS) \
	$(COMPFACE_LIBS) \
	$(JPILOT_LIBS) \
	$(PTHREAD_LIBS) \
	$(GNOMEPRINT_LIBS) \
	$(LIBICONV) \
	$(STARTUP_NOTIFICATION_LIBS)

AM_CPPFLAGS = \
	-DG_LOG_DOMAIN=\"Sylpheed\" \
	-DLOCALEDIR=\""$(localedir)"\" \
	-DMANUALDIR=\""$(manualdir)"\" \
	-DFAQDIR=\""$(faqdir)"\" \
	-DTARGET_ALIAS=\""$(target_triplet)"\" \
	-DSYSCONFDIR=\""$(sysconfdir)"\" \
	$(ASPELL_CFLAGS) \
	$(GTK_CFLAGS) \
	$(GPGME_CFLAGS) \
	$(OPENSSL_CFLAGS) \
	$(GNOMEPRINT_CFLAGS) \
	$(STARTUP_NOTIFICATION_CFLAGS)

AM_YFLAGS = -d
