EXTRA_TOOLS = \
	OOo2sylpheed.pl \
	calypso_convert.pl \
	convert_mbox.pl \
	eud2gc.py \
	filter_conv.pl \
	freshmeat_search.pl \
	gif2xface.pl \
	gpg-sign-syl \
	google_msgid.pl \
	google_search.pl \
	kmail2sylpheed.pl \
	kmail2sylpheed_v2.pl \
	launch_firebird \
	maildir2sylpheed.pl \
	multiwebsearch.pl \
	newscache_clean.pl \
	outlook2sylpheed.pl \
	sylpheed-switcher \
	sylprint.pl \
	sylprint.rc \
	tb2sylpheed \
        update-po \
	uudec \
	vcard2xml.py

EXTRA_DIST = \
	README \
	README.sylprint \
	multiwebsearch.conf \
	$(EXTRA_TOOLS)

MAKE_EXE = chmod u+x $(EXTRA_TOOLS)

all-local:
	$(MAKE_EXE)
