EXTRA_TOOLS = \
	OOo2sylpheed.pl \
	acroread2sylpheed.pl \
	calypso_convert.pl \
	convert_mbox.pl \
	eud2gc.py \
	filter_conv.pl \
	filter_conv_new.pl \
	freshmeat_search.pl \
	gif2xface.pl \
	google_msgid.pl \
	google_search.pl \
	kmail2sylpheed.pl \
	kmail2sylpheed_v2.pl \
	maildir2sylpheed.pl \
	multiwebsearch.pl \
	nautilus2sylpheed.sh \
	outlook2sylpheed.pl \
	sylprint.pl \
	sylprint.rc \
	tb2sylpheed \
	tbird2syl.py \
	textviewer.pl \
	textviewer.sh \
        update-po \
	uudec \
	vcard2xml.py \
	kdeservicemenu/install.sh \
	kdeservicemenu/sylpheed-kdeservicemenu.pl

EXTRA_DIST = \
	README \
	README.sylprint \
	multiwebsearch.conf \
	kdeservicemenu/README \
	kdeservicemenu/template_sylpheed-attach-files.desktop \
	kdeservicemenu/template_sylpheed-compress-attach.desktop \
	$(EXTRA_TOOLS)

MAKE_EXE = chmod u+x $(EXTRA_TOOLS)

all-local:
	$(MAKE_EXE)
