EXTRA_TOOLS = \
	OOo2claws-mail.pl \
	acroread2claws-mail.pl \
	calypso_convert.pl \
	convert_mbox.pl \
	eud2gc.py \
	filter_conv.pl \
	filter_conv_new.pl \
	fix_date.sh \
	freshmeat_search.pl \
	gif2xface.pl \
	google_msgid.pl \
	google_search.pl \
	kmail2claws-mail.pl \
	kmail2claws-mail_v2.pl \
	kmail-mailbox2claws-mail.pl \
	multiwebsearch.pl \
	nautilus2claws-mail.sh \
	outlook2claws-mail.pl \
	sylprint.pl \
	sylprint.rc \
	tb2claws-mail \
	tbird2claws.py \
	textviewer.pl \
	textviewer.sh \
	thunderbird-filters-convertor.pl \
	update-po \
	uudec \
	uuooffice \
	vcard2xml.py \
	kdeservicemenu/install.sh \
	kdeservicemenu/claws-mail-kdeservicemenu.pl

EXTRA_DIST = \
	README \
	README.sylprint \
	multiwebsearch.conf \
	kdeservicemenu/README \
	kdeservicemenu/template_claws-mail-attach-files.desktop \
	$(EXTRA_TOOLS)

MAKE_EXE = chmod u+x $(EXTRA_TOOLS)

all-local:
	$(MAKE_EXE)
